--- a/automk/README
+++ b/automk/README
@@ -1,5 +1,5 @@
-The "automk" PROJECT
-========================
+The "automk" make/bash template project
+=======================================
 
 --------------------------------------------------------------------
 Copyright (C) 2017 Samo Pogacnik <samo_pogacnik@t-2.net>
@@ -10,32 +10,40 @@ BSD 3-Clause license, which is available in the LICENSE file of this
 project.
 --------------------------------------------------------------------
 
-The "u2up.build" project serves as a template for building software projects.
+The "automk" project serves as a template for building software projects.
 
 Features:
-=========
+---------
+Provides a framework to help adding build rules to your source tree.
 
-Native Build using make directly:
-================
-Configure only:
---------------
-~/PROJECT$\
- env BUILDIR=../build PREFIX=/usr/local ./configure 
+You need to add a "config.mk" file to each subdirectory of your
+source tree. A "config.mk" variable "SUBMAKES" has to be defined to
+specify all current directory specific target make files and subdirectories
+required to dive into. Order of target make files and subdirectories in a
+current "config.mk" also define build order of those targets.
 
-Compile only:
-------------
-~/PROJECT$\
- make
+For each specific target make file, targets "all", "clean" and "install"
+need to be defined (check this template samples).
 
-Installation:
-------------
-~/PROJECT$\
- env DESTDIR=$(pwd)/../install make install
+It automatically adds out-of-tree build capability to your projects.
 
-Clean:
-------
-~/PROJECT$\
- make clean
+Basic build commands:
+---------------------
+"configure":
+~~~~~~~~~~~~
+your_project_home$ env BUILDIR=../build PREFIX=/usr/local ./configure
+
+"build":
+~~~~~~~~
+your_project_home$ make
+
+"install":
+~~~~~~~~~~
+your_project_home$ env DESTDIR=$(pwd)/../install make install
+
+"clean":
+~~~~~~~~
+your_project_home$ make clean
 
 ---
 End!
