--- a/automk/README
+++ b/automk/README
@@ -10,11 +10,16 @@ BSD 3-Clause license, which is available in the LICENSE file of this
 project.
 --------------------------------------------------------------------
 
+Description:
+------------
 The "automk" project serves as a template for building software projects.
+It provides a framework to help adding build rules to your source tree.
 
-Features:
----------
-Provides a framework to help adding build rules to your source tree.
+Usage:
+------
+To able to use this template, copy the "automk" subdirectory into the
+home directory of your source tree (you may also create symlinks to
+create initial "configure" and "Makefile" like in this template example).
 
 You need to add a "config.mk" file to each subdirectory of your
 source tree. A "config.mk" variable "SUBMAKES" has to be defined to
@@ -27,8 +32,7 @@ need to be defined (check this template samples).
 
 It automatically adds out-of-tree build capability to your projects.
 
-Basic build commands:
----------------------
+Build commands:
 "configure":
 ~~~~~~~~~~~~
 your_project_home$ env BUILDIR=../build PREFIX=/usr/local ./configure
