--- a/automk/README
+++ b/automk/README
@@ -33,21 +33,25 @@ need to be defined (check this template samples).
 It automatically adds out-of-tree build capability to your projects.
 
 Build commands:
-"configure":
+"Configure":
 ~~~~~~~~~~~~
-your_project_home$ env BUILDIR=../build PREFIX=/usr/local ./configure
+project_home$ env BUILDIR=../build PREFIX=/usr/local ./configure
 
-"build":
+or (using cross-toolchain)
+
+project_home$ env BUILDIR=./build PREFIX=/usr/local ENVFILE=/home/samo/Yocto-RPI3/eSDK/environment-setup-cortexa7hf-neon-vfpv4-poky-linux-gnueabi ./configure
+
+"Build":
 ~~~~~~~~
-your_project_home$ make
+project_home$ make
 
-"install":
+"Install":
 ~~~~~~~~~~
-your_project_home$ env DESTDIR=$(pwd)/../install make install
+project_home$ env DESTDIR=$(pwd)/../install make install
 
-"clean":
+"Clean":
 ~~~~~~~~
-your_project_home$ make clean
+project_home$ make clean
 
 ---
 End!
